testing mode routes, nginx https, env variables fix
